CNCS Dev 12/src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Applications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applications</label>
        <referenceTo>Applications1__c</referenceTo>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concept_Paper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concept Paper</label>
        <referenceTo>Concept_Papers__c</referenceTo>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <label>Corporate Program</label>
        <picklist>
            <picklistValues>
                <fullName>TTA Regional Conferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA Headquarters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application12</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application1</pluralLabel>
    <recordTypes>
        <fullName>AmeriCorps_Fixed_Amount_Grant</fullName>
        <active>true</active>
        <label>AmeriCorps Fixed Amount Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_Indian_Tribes</fullName>
        <active>true</active>
        <label>AmeriCorps Indian Tribes</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_NCCC</fullName>
        <active>true</active>
        <label>AmeriCorps NCCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_National</fullName>
        <active>true</active>
        <label>AmeriCorps National</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_State</fullName>
        <active>true</active>
        <label>AmeriCorps State</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_State_without_Comissions</fullName>
        <active>true</active>
        <label>AmeriCorps State without Comissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_Territories</fullName>
        <active>true</active>
        <label>AmeriCorps Territories</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_VISTA</fullName>
        <active>true</active>
        <label>AmeriCorps VISTA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Basic_Innovative_Programs</fullName>
        <active>true</active>
        <description>Managing the Budget structure</description>
        <label>Basic Innovative Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commission_Administration</fullName>
        <active>true</active>
        <label>Commission Administration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disability</fullName>
        <active>true</active>
        <label>Disability</label>
    </recordTypes>
    <recordTypes>
        <fullName>FGP_Component_Programs</fullName>
        <active>true</active>
        <label>FGP Component Programs</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>